--- a/p8105_hw1_yz4717.html
+++ b/p8105_hw1_yz4717.html
@@ -448,10 +448,10 @@ mean_3 = mean(vc_char)</code></pre>
 <pre class="r"><code>mean_rs = list(mean_1,mean_2,mean_3,mean_4)
 mean_rs</code></pre>
 <pre><code>## [[1]]
-## [1] 0.3667649
+## [1] -0.2168704
 ## 
 ## [[2]]
-## [1] 0.7
+## [1] 0.5
 ## 
 ## [[3]]
 ## [1] NA
@@ -459,7 +459,12 @@ mean_rs</code></pre>
 ## [[4]]
 ## [1] NA</code></pre>
 <p>As the question mentioned, I used the “mean()” function to calculate
-the average. As you can see</p>
+average. As you can see, this function can calculate the mean of numeric
+and logical vector. It is obvious that it can calculate numeric vector
+and can not calculate character vector. When it comes to logical vector,
+we can still get a result, just because the logical value is a simple
+‘0’ or ‘1’ in the computer(which stands for ‘False’ or ‘True’
+respectively).</p>
 </div>
 
 
